# UnrealProjectAnalyzer

./: .gitignore  .gitmodules  ARCHITECTURE.md  README.md  README_CN.md  UnrealCopilot.uplugin  UnrealProjectAnalyzer.uplugin  pyproject.toml
.claude/: settings.local.json
Content/Python/: README.md  bridge_server.py  init_analyzer.py  pyproject.toml  uv_sync.py
Content/Python/tests/: test_skill_tool_schema.py
Content/Python/unreal_copilot/: __init__.py  config.py  server.py
Content/Python/unreal_copilot/cpp_analyzer/: __init__.py  analyzer.py  patterns.py  queries.py
Content/Python/unreal_copilot/skills/: __init__.py  runner.py
Content/Python/unreal_copilot/tools/: __init__.py  asset.py  blueprint.py  cross_domain.py  skills.py  unified.py
Content/Python/unreal_copilot/ue_client/: __init__.py  http_client.py
Docs/: BLUEPRINT_EDITING_PLAN.md
ue5-project-analyzer/: README.md  pyproject.toml
ue5-project-analyzer/src/ue5_analyzer/: __init__.py  config.py  server.py
ue5-project-analyzer/src/ue5_analyzer/cpp_analyzer/: __init__.py  analyzer.py  patterns.py  queries.py
ue5-project-analyzer/src/ue5_analyzer/tools/: __init__.py  asset.py  blueprint.py  cpp.py  cross_domain.py
ue5-project-analyzer/src/ue5_analyzer/ue_client/: __init__.py  http_client.py
ue5-project-analyzer/tests/: __init__.py  test_cpp_analyzer.py
ue5-project-analyzer/unreal-plugin/: UE5ProjectAnalyzer.uplugin
ue5-project-analyzer/unreal-plugin/Content/Python/: bridge_server.py
ue5-project-analyzer/unreal-plugin/Source/UE5ProjectAnalyzer/: UE5ProjectAnalyzer.Build.cs
ue5-project-analyzer/unreal-plugin/Source/UE5ProjectAnalyzer/Private/: UE5ProjectAnalyzer.cpp
ue5-project-analyzer/unreal-plugin/Source/UE5ProjectAnalyzer/Public/: UE5ProjectAnalyzer.h
(+79 files in other folders)
