[project]
name = "unreal-copilot"
version = "0.3.1"
description = "Unreal Copilot MCP server with skills and analysis for Blueprint/Asset/C++"
readme = "README.md"
license = { text = "MIT" }
requires-python = "==3.11.*"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unreal_copilot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

